--- a/styles.css
+++ b/styles.css
@@ -107,8 +107,12 @@ body {
     padding: 20px;
     text-align: center;
     width: 30%;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-  }
+    transition: 0.2s ease;
+}
+
+.card:hover {
+  transform: scale(1.05);
+}
 
   .card h3{
     font-size: 1.8rem;
