--- a/styles.css
+++ b/styles.css
@@ -1,286 +1,378 @@
 :root {
-    --primary-color: #d3d3d3;
-    --primary-color-light: #e6e4e4;
-    --secondary-color: #333333;
-    --secondary-color-light: #495E57;
-    --accent-color: #f0f771;
-    --accent-color-light:  #fae105;
-    --accent-color-dark: #f4ce14;
-    }
+  --primary-color: #d3d3d3;
+  --primary-color-light: #e6e4e4;
+  --secondary-color: #333333;
+  --secondary-color-light: #495e57;
+  --accent-color: #f0f771;
+  --accent-color-light: #fae105;
+  --accent-color-dark: #f4ce14;
+}
 
 body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    background-color: var(--primary-color-light);
-  }
-  
-  .header {
-    display: flex;
-    padding: 20px;
-    justify-content: space-around;
-    background-color: var(--primary-color);
-  }
-  
-  .header .logo {
-    height: 80px;
-    align-self: center;
-  }
-  
-  .header .site-name {
-    margin-left: 10px;
-  }
-  
-  /* NAVBAR */
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  background-color: var(--primary-color);
+}
 
-  .navbar {
-    text-align: center;
-    background-color: var(--secondary-color);
-  }
-  
-  .navbar ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    display: inline-block;
-  }
-  
-  .navbar li {
-    display: inline;
-    margin: 0 10px;
-  }
+.header {
+  display: flex;
+  padding: 20px;
+  justify-content: space-around;
+  background-color: var(--primary-color-light);
+}
 
-  .navbar a:hover {
-    background-color: #495E57;
-  }
-  
-  .navbar a {
-    text-decoration: none;
-    color: white;
-    padding: 10px 20px;
-    display: inline-block;
-  }
-  
-  /* BANNER */
+.header .logo {
+  height: 80px;
+  align-self: center;
+}
 
-  .banner{
-    color: var(--primary-color-light);
-    text-align: center;
-    height: 140px;
-    padding: 20px 20px 20px 40px;
-    position: relative;
-  }
-  .banner::before{
-    content: "";
-    position: absolute;
-    top: 0; left: 0;
-    width: 100%; height: 100%;
-    background-image: url('assets/banner.jpg');
-    background-size: cover;
-    filter:brightness(0.5);
-  }
+.header .site-name {
+  margin-left: 10px;
+}
 
-  .banner p, .banner h2{
-    position:relative;
-  }
-  .banner p{
-    padding: 0% 20%;
-    font-weight: 700;
-  }
-  .banner h2{
-    font-size: 2rem;
-    margin-bottom: .2%;
-  }
+/* NAVBAR */
 
-  /* CARDS */
-  
-  .cards {
-    display: flex;
-    justify-content: space-around;
-    padding: 20px;
-    gap: 30px;
+.navbar {
+  text-align: center;
+  background-color: var(--secondary-color);
+}
+
+.navbar ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: inline-block;
+}
+
+.navbar li {
+  display: inline;
+  margin: 0 10px;
+}
+
+.navbar a:hover {
+  background-color: #495e57;
+}
+
+.navbar a {
+  text-decoration: none;
+  color: white;
+  padding: 10px 20px;
+  display: inline-block;
+}
+
+/* BANNER */
+
+.banner {
+  color: var(--primary-color-light);
+  text-align: center;
+  height: 140px;
+  padding: 20px 20px 20px 40px;
+  position: relative;
+  contain: strict;
+}
+.banner::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 200%;
+  background-image: url("assets/banner.jpg");
+  background-size: cover;
+  filter: brightness(0.5);
+}
+
+.banner p,
+.banner h2 {
+  position: relative;
+}
+.banner p {
+  padding: 0% 15%;
+  font-weight: 700;
+  font-size: 1rem;
+}
+.banner h2 {
+  font-size: 2rem;
+  margin-bottom: 0.2%;
+  animation: glow 3s ease-in-out infinite;
+}
+@keyframes glow {
+  0%, 100% {
+    color: #FFF;
+    text-shadow: 0 0 10px #f4ce14, 0 0 50px #f0f771, 0 0 100px #f4ce14;
   }
   
-  .card {
-    background-color: #f9f9f9;
-    padding: 20px;
-    text-align: center;
-    width: 30%;
-    transition: 0.2s ease;
+  10%, 90% {
+    color: #ffffff;
+    text-shadow: none;
+  }
+}
+
+
+/* CARDS */
+
+.cards {
+  display: flex;
+  justify-content: center;
+  align-content: space-between;
+  flex-direction: row;
+  flex-wrap: wrap;
+  padding: 20px;
+  gap: 20px;
+  margin-top: 2%;
+  margin-bottom: 2%;
+}
+
+.card {
+  background-color: #f9f9f9;
+  padding: 20px;
+  text-align: center;
+  width: 200px;
+  transition: 0.2s ease;
 }
 
 .card:hover {
   transform: scale(1.05);
 }
 
-  .card h3{
-    font-size: 1.8rem;
-  }
-  
-  .card img {
-    width: 100%;
-    height: auto;
-  }
-
-  .card span{
-    display: block;
-    font-weight: 600;
-  }
-
-  /* MENU PAGE */
-
-  .menu-cards{
-    display: flex;
-    justify-content: center;
-    align-content: space-between;
-    flex-direction: row;
-    flex-wrap: wrap;
-    /* padding: 2%; */
-    margin: 2%;
-  }
-  .menu-card{
-    width: 250px;
-  }
-  .menu-card h3{
-    font-size: 1.5rem;
-    border-bottom: 4px double var(--secondary-color) ;
-    padding-bottom: 2%;
-  }
-  .menu-card img{
-    height: 200px;
-    object-fit: contain;
-    text-align: center;
-  }
-  .menu-card span{
-    display: block;
-    text-shadow: var(--secondary-color);
-    font-weight: 600;
-    font-style: italic;
-  }
-  .menu-btn{
-    background-color: var(--accent-color-dark);
-    font-size: 1.6rem;
-    color: var(--secondary-color-light);
-    font-weight: 900;
-    margin: 10% 3% 2% 10%;
-    padding: 5%;
-    border: 4px solid var(--secondary-color-light);
-    border-radius: 7px;
-    text-decoration-style: double;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-  }
-
-  .menu-btn a{
-    text-decoration: none;
-    color: var(--secondary-color-light);
-  }
-
-  .menu-btn:hover{
-    background-color: #f0f771;
-  }
-
-  /* BOOKING PAGE */
-  .booking-cards{
-    display: flex;
-    align-content: center;
-    justify-content: space-around;
-    padding: 10px;
-    row-gap: 20px;
-    flex-direction: row;
-    flex-wrap: wrap;
-    margin: 4%;
-  }
-  .table-card{
-    width: 200px;
-    text-align: center;
-  }
-  .table-card h3{
-    border-bottom: 4px double var(--secondary-color) ;
-  }
-  .table-card-text{
-    text-align: center;
-  }
-  .table-card-text span{
-    display: block;
-    padding-top: 5%;
-    margin-bottom: 10%;
-  }
-  .table-card-text span:nth-child(1){
-    background-color: var(--accent-color-light);
-    font-style: italic;
-    font-weight: 600;
-  }
-  .table-card-text a{
-    margin-bottom: 70px;
-    text-decoration: none; 
-    background-color: var(--primary-color-light);
-    color: var(--secondary-color-light);
-    padding: 4% 8%;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-    font-size: 2rem;
-    font-weight: 600;
-
-  }
-  /* ABOUT PAGE */
-  .about{
-    padding: 2% 12% 4% 12%;
-    text-align: center;
-    background-color: var(--primary-color);
-  }
-  .about h2{
-    padding: 2%;
-  }
-  .about-container{
-    padding: 2%;
-    display: inline-flex;
-    flex-direction: column;
-  }
-
-  .about-container, .about h2{
-    background-color: var(--primary-color-light);
-    border: 3px dashed var(--accent-color-light);
-  }
-  
-  .about-paragraph span{
-    font-size: 4rem;
-    color: #383737;
-    border: 4px solid #383737;
+.card h3 {
+  font-size: 1.6rem;
 }
 
-  .about-logo, .about-container p{
-    padding: 2%;
-    align-self: center;
+.card img {
+  width: 100%;
+  height: auto;
+}
 
-  }
-  @media screen and (min-width: 200px) {
-    .about-container p {
-        display: inline-flex;
-    }
+.card span {
+  display: block;
+  font-weight: 600;
+}
 
-    .about-logo{
-        width: 30%;
-        padding: 2% 30%;
-        border-radius: 7px;
-        border: 3px solid var(--secondary-color);
-        background-color: var(--accent-color);
-    }
-  }
-  
-  /* FOOTER */
+/* MENU PAGE */
 
-  .footer {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 20px;
-    background-color: var(--secondary-color);
-    color: white;
+.menu-cards {
+  display: flex;
+  justify-content: center;
+  align-content: space-between;
+  flex-direction: row;
+  flex-wrap: wrap;
+  /* padding: 2%; */
+  margin: 2%;
+}
+.menu-card {
+  width: 250px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+.menu-card h3 {
+  font-size: 1.5rem;
+  border-bottom: 4px double var(--secondary-color);
+  padding-bottom: 2%;
+}
+.menu-card img {
+  height: 200px;
+  object-fit: contain;
+  text-align: center;
+}
+.menu-card span {
+  display: block;
+  text-shadow: var(--secondary-color);
+  font-weight: 600;
+  font-style: italic;
+}
+.menu-btn {
+  background-color: var(--accent-color-dark);
+  font-size: 1.6rem;
+  color: var(--secondary-color-light);
+  font-weight: 900;
+  margin: 10% 3% 2% 10%;
+  padding: 5%;
+  border: 4px solid var(--secondary-color-light);
+  border-radius: 7px;
+  text-decoration-style: double;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+.menu-btn a {
+  text-decoration: none;
+  color: var(--secondary-color-light);
+}
+
+.menu-btn:hover {
+  background-color: #f0f771;
+}
+
+/* BOOKING PAGE */
+.booking-cards {
+  display: flex;
+  align-content: center;
+  justify-content: space-around;
+  padding: 10px;
+  row-gap: 20px;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin: 4%;
+}
+.table-card {
+  width: 200px;
+  text-align: center;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+.table-card h3 {
+  border-bottom: 4px double var(--secondary-color);
+}
+.table-card-text {
+  text-align: center;
+}
+.table-card-text span {
+  display: block;
+  padding-top: 5%;
+  margin-bottom: 10%;
+}
+.table-card-text span:nth-child(1) {
+  background-color: var(--accent-color-light);
+  font-style: italic;
+  font-weight: 600;
+}
+.table-card-text a {
+  margin-bottom: 70px;
+  text-decoration: none;
+  background-color: var(--primary-color-light);
+  color: var(--secondary-color-light);
+  padding: 4% 8%;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  font-size: 2rem;
+  font-weight: 600;
+}
+/* ABOUT PAGE */
+.about {
+  padding: 4% 12% 4% 12%;
+  text-align: center;
+  background-color: var(--primary-color);
+}
+.about h2 {
+  padding: 2%;
+}
+.about-container {
+  padding: 2%;
+  display: inline-flex;
+  flex-direction: column;
+}
+
+@keyframes glow-sign {
+  0% {
+    box-shadow: 0 0 5px #f4ce14, 0 0 10px #f4f98e, 0 0 15px #f4ce14;
   }
-  
-  .footer .footer-logo {
-    height: 30px;
+  100% {
+    box-shadow: 0 0 20px #f6cf0c, 0 0 40px #f4f98e, 0 0 60px #f4ce14;
   }
-  .footer-logo{
-    color: var(--accent-color);
+}
+
+.about-container,
+.about h2 {
+  background-color: white;
+  color: var(--secondary-color);
+  border: 2px  inset var(--secondary-color-light);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+.about-container:hover{
+  font-weight: 700;
+}
+
+.about-paragraph span {
+  font-size: 4rem;
+  color: white;
+  background-color: #383737;
+  border: 4px solid #383737;
+}
+
+.about-logo{
+  border: 2px solid var(--accent-color-light);
+  box-shadow: 0 0 10px var(--accent-color-dark);
+  animation: glow-sign 1s ease-in infinite;
+}
+
+.about-logo,
+.about-container p {
+  padding: 2%;
+  align-self: center;
+}
+@media screen and (min-width: 200px) {
+  .about-container p {
+    display: inline-flex;
   }
+
+  .about-logo {
+    width: 30%;
+    padding: 2% 30%;
+    border-radius: 7px;
+    /* border: 3px solid var(--secondary-color); */
+    background-color: var(--accent-color);
+  }
+}
+
+/* FOOTER */
+
+.footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 20px;
+  background-color: var(--secondary-color);
+  color: white;
+}
+
+.footer .footer-logo {
+  height: 30px;
+}
+.footer-logo {
+  color: var(--accent-color);
+}
+
+@media only screen and (max-width: 480px) {
+  .header .logo {
+    height: 60px;
+  }
+ 
+  .banner{
+    overflow: visible;
+    height: 250px;
+  }
+  .banner-text {
+    position: relative;
+    font-size: 1.1rem;
+  }  
+}
+@media only screen and (max-width: 300px) {
+  .header .logo {
+    height: 40px;
+  }
+ 
+  .banner{
+    height: 300px;
+    object-fit: fill;
+    min-height: fit-content;
+  }
+  .banner p{
+    padding: 0%;
+  }
+
+  .banner-text {
+    padding: 0;
+  }  
+}
+@media only screen and (max-width: 200px){
+  .header .logo{
+    height: 20px;
+  }
+  .banner h2{
+    font-size: 1.3rem;
+  }
+  .banner{
+    padding: 2px;
+    contain: content;
+  }
+}
